--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,36 +1,55 @@
-name: platformio build
+name: build
 
 on:
   push:
-    branches: ["main"]
-    tags: ["v*"]
-    paths-ignore: ["*.md"]
+    branches: [ "main" ]
+    tags: [ "v*" ]
+    paths-ignore: [ "*.md" ]
   pull_request:
-    branches: ["main"]
-    paths-ignore: ["*.md"]
+    branches: [ "main" ]
+    paths-ignore: [ "*.md" ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        # ESP-IDF versions and targets
+        idf_ver: [ v4.3, v4.4 ]
+        idf_target: [ esp32, esp32s2, esp32s3, esp32c3, esp32h2 ]
+        # Filter out unsupported combinations
+        exclude:
+          - { idf_target: esp32c3, idf_ver: v4.3 }
+          - { idf_target: esp32s3, idf_ver: v4.3 }
+          - { idf_target: esp32h2, idf_ver: v4.3 }
+          - { idf_target: esp32h2, idf_ver: v4.4 }
+    container: espressif/idf:release-${{ matrix.idf_ver }}
     steps:
       - uses: actions/checkout@v2
-        with:
-          submodules: recursive
+
+      - name: Build
+        env:
+          IDF_TARGET: ${{ matrix.idf_target }}
+        working-directory: example
+        run: |
+          . ${IDF_PATH}/export.sh
+          idf.py build
+
+  platformio:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
 
       - name: Setup Python
-        uses: actions/setup-python@v2.2.2
+        uses: actions/setup-python@v2.3.1
         with:
           python-version: 3.9
-          
+
       - name: Install platformio
         run: |
           python -m pip install --upgrade pip
           pip install --upgrade platformio
-          
-      - name: Check
-        run: |
-          platformio check
-          
+
       - name: Build
-        run: |
-          platformio run -e debug
+        run: platformio run
