--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,11 +27,12 @@ jobs:
     container: espressif/idf:release-${{ matrix.idf_ver }}
     steps:
       - uses: actions/checkout@v2
+        with:
+          recursive: true
 
       - name: Build
         env:
           IDF_TARGET: ${{ matrix.idf_target }}
-        working-directory: example
         run: |
           . ${IDF_PATH}/export.sh
           idf.py build
@@ -40,6 +41,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+        with:
+          recursive: true
 
       - name: Setup Python
         uses: actions/setup-python@v2.3.1
