--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,49 +10,39 @@ on:
     paths-ignore: [ "*.md" ]
 
 jobs:
-  build:
+  idf:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
         # ESP-IDF versions and targets
         idf_ver: [ v4.3, v4.4 ]
-        idf_target: [ esp32, esp32s2, esp32s3, esp32c3, esp32h2 ]
+        idf_target: [ esp32, esp32s2, esp32s3, esp32c3 ]
         # Filter out unsupported combinations
         exclude:
           - { idf_target: esp32c3, idf_ver: v4.3 }
           - { idf_target: esp32s3, idf_ver: v4.3 }
-          - { idf_target: esp32h2, idf_ver: v4.3 }
-          - { idf_target: esp32h2, idf_ver: v4.4 }
     container: espressif/idf:release-${{ matrix.idf_ver }}
     steps:
       - uses: actions/checkout@v2
-        with:
-          submodules: recursive
+
+      - name: Setup Component Manager
+        if: idf_ver == v4.3
+        run: |
+          . ${IDF_PATH}/export.sh
+          pip install idf-component-manager --upgrade
 
       - name: Build
         env:
           IDF_TARGET: ${{ matrix.idf_target }}
+        working-directory: example
         run: |
+          # Switch to SoftAP provisioning for esp32s2 
+          if [ ${{ matrix.idf_target == 'esp32s2' }} ]; then
+            echo "CONFIG_WIFI_AUTO_PROV_TYPE_BLE=n" >> sdkconfig
+            echo "CONFIG_WIFI_AUTO_PROV_TYPE_SOFT_AP=y" >> sdkconfig
+            echo "CONFIG_BT_ENABLED=n" >> sdkconfig
+          fi
+          
           . ${IDF_PATH}/export.sh
           idf.py build
-
-  platformio:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          submodules: recursive
-
-      - name: Setup Python
-        uses: actions/setup-python@v2.3.1
-        with:
-          python-version: 3.9
-
-      - name: Install platformio
-        run: |
-          python -m pip install --upgrade pip
-          pip install --upgrade platformio
-
-      - name: Build
-        run: platformio run
