--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,4 @@
-cmake_minimum_required(VERSION 3.15.0)
-
-list(APPEND EXTRA_COMPONENT_DIRS ${CMAKE_CURRENT_LIST_DIR}/rainmaker/components)
+cmake_minimum_required(VERSION 3.13.4)
 
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
-project(esp-app-template)
+project(app_template)
