chore(ci): force use of component manager

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,6 +9,9 @@ on:
     branches: [ "main" ]
     paths-ignore: [ "*.md" ]
 
+env:
+  IDF_COMPONENT_MANAGER: "1"
+
 jobs:
   idf:
     runs-on: ubuntu-latest
