--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,7 +33,7 @@ jobs:
         if: idf_ver == v4.3
         run: |
           . ${IDF_PATH}/export.sh
-          pip install idf-component-manager --upgrade
+          pip install --upgrade idf-component-manager
 
       - name: Build
         env:
